<resources>
    <string name="app_name">Project W3WE</string>
    <string name="add_new_expense">ADD NEW EXPENSE</string>
    <string name="expenses">EXPENSES</string>
    <string name="vendor">VENDOR</string>
    <string name="vendor_hint">Enter the vendor\'s name.</string>
    <string name="amount">AMOUNT</string>
    <string name="amount_hint">Enter the amount.</string>
    <string name="submit">SUBMIT</string>
    <string name="edit_expense">EDIT EXPENSE</string>
    <string name="modify">MODIFY</string>
    <string name="delete">DELETE</string>
</resources>
