<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/edit_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_expense"
        android:textSize="@dimen/dimen_40dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vendor_edit_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vendor"
        android:textSize="@dimen/dimen_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_textView"/>

    <EditText
        android:id="@+id/vendor_edit_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp"
        android:hint="@string/vendor_hint"
        android:textSize="@dimen/dimen_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vendor_edit_textView"/>

    <TextView
        android:id="@+id/amount_edit_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="@dimen/dimen_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vendor_edit_editText"/>

    <EditText
        android:id="@+id/amount_edit_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp"
        android:hint="@string/amount_hint"
        android:textSize="@dimen/dimen_16dp"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_edit_textView"/>

    <Button
        android:id="@+id/delete_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="@dimen/dimen_24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/modify_edit_button"/>

    <Button
        android:id="@+id/modify_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:textSize="@dimen/dimen_24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>